# programming

./: .gitignore  .gitmodules  README.md  mergesort.py  sort.c
1_semester/lab_10/na_3/: 3.c
1_semester/lab_10/na_4-5/: Makefile  main_func.c
1_semester/lab_3/: 14.c
1_semester/lab_4/: 3.c
1_semester/lab_5/: 4.c
1_semester/lab_6/: 5.c
1_semester/lab_8/: var3_5.c
1_semester/lab_9/: sort.c
1_semester/lab_9/programming/: README.md
1_semester/lab_9/programming/lab_10/na_4-5/: func.h  main_func.c  other_func.c
1_semester/lab_9/programming/lab_9/: README.md  mergesort.py
lab_10/na_3/: 3  3.c
lab_10/na_4-5/: func.h  main  main_func.c  other_func.c
lab_11/: 1.c  2.c  3.c  4.c
lab_12/: 3  3.c  README.md  coffeehouse.c  coffeehouse.h  main.c
lab_12/dynamic_lib/: coffeehouse.c  coffeehouse.h  main.c
lab_12/static lib/: .gitignore  coffe_exe  coffeehouse.h
lab_12/static_lib/: coffeehouse.c
lab_13/: README.md
lab_13/na_3-4/: CMakeLists.txt  Makefile
lab_13/na_3-4/include/: coffeehouse.h
lab_13/na_3-4/src/: coffeehouse.c  main.c
lab_13/na_5/cmake_task/: CMakeLists.txt
lab_13/na_5/cmake_task/background/: CMakeLists.txt
lab_13/na_5/cmake_task/pipes/: CMakeLists.txt
lab_13/na_5/cmake_task/src/: main.c
lab_14/: README.md  doubly.c  singly.c  star.c
lab_15/: README.md  database.rle  main.c  staff.csv
lab_16/: full_data_time_matrix.c  graph.py  na_3.c  na_4.c  stats.csv  отчет.md
lab_4/: 4.c
lab_5/: 5.c
lab_7/: 5.c
lab_debugger/: 5.c  star.c
paint++/src/: main.cpp  paint_core.cpp
rgz/: CMakeLists.txt  scenario.txt
rgz/src/: game.c  game.h  main.c
